--- a/JS_primitif-data/2-number.html
+++ b/JS_primitif-data/2-number.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <script>
-      // Semua data yang berupa nomor/angka, baik bilangan desimal dgn koma atau tidak
+      // Semua data yang berupa nomor/angka,
+      // baik bilangan desimal dgn koma (dalam penulisanm koma = titik) atau tidak
       // Contoh Tipe Data Number
       var total = 1500;
       var pi = 3.14;
