--- a/JS_primitif-data/5-array.html
+++ b/JS_primitif-data/5-array.html
@@ -24,6 +24,10 @@
         },
       ];
       var emptyArray = [];
+      console.log(fruits);
+      console.log(fruits[2]);
+      console.log(students[1]);
+
       // Buatlah variable baru berupa array.
       // Silahkan tampilkan pada console
 
