--- a/JS_primitif-data/1-string.html
+++ b/JS_primitif-data/1-string.html
@@ -9,12 +9,12 @@
   <body>
     <script>
       // Semua karakter baik huruf atau angka yang dibalut oleh "", '', atau ``
-      // Contoh
+      // Contoh String
       var name = "Digidev";
       var city = "Medan";
       var email = `digidev@gmail.com`;
       var emptyString = ""; //string kosong
-      console.log(email);
+      console.log(name);
 
       // Buatlah variable baru yg isinya adalah nama kamu,
       // Silahkan tampilkan pada console
