add some wording and video tutorial file

--- a/JS_Operators/1-arithmetic.html
+++ b/JS_Operators/1-arithmetic.html
@@ -32,6 +32,7 @@
 
       console.log(modulus);
 
+      // MODUL
       // Kerjakan proses aritmetik berikut
       // sesuai dengan petunjuk
       // Silahkan tampilkan pada console
