--- a/JS_Operators/2-assignment.html
+++ b/JS_Operators/2-assignment.html
@@ -30,6 +30,7 @@
       // console.log("a =", a);
       // console.log((a **= 2)); // a = a ** 2
 
+      // MODUL
       // Kerjakan proses aritmetik berikut
       // sesuai dengan petunjuk
       // Ulangi penggunaan operator assigment diatas
