--- a/JS_Operators/3-comparison.html
+++ b/JS_Operators/3-comparison.html
@@ -44,6 +44,7 @@
         a > b ? "benar! A lebih besar dari B" : "salah, A lebih kecil dari B";
       console.log(newVar);
 
+      // MODUL
       // Buatlah perbandingan dengan dengan instruksi sbg berikut
       // a <= b
 
