add modul for condition

--- a/JS_Condition/1-if-else.html
+++ b/JS_Condition/1-if-else.html
@@ -37,6 +37,7 @@
         domBtn.innerText = "ADMIN";
         domBtn.classList += " btn-admin";
         // silahkan lanjutkan utk kondisi Role User Customer & CEO
+        // Uncomment code di bawah utk memulai pengerjaan
       }
       // else if () {
 
