make code clean

--- a/JS_Operators/1-arithmetic.html
+++ b/JS_Operators/1-arithmetic.html
@@ -32,7 +32,7 @@
 
       console.log(modulus);
 
-      // MODUL
+      // <--- MODUL --->
       // Kerjakan proses aritmetik berikut
       // sesuai dengan petunjuk
       // Silahkan tampilkan pada console
