--- a/JS_Operators/4-logical.html
+++ b/JS_Operators/4-logical.html
@@ -34,7 +34,7 @@
       var newNot = !d;
       console.log(newNot);
 
-      // MODUL
+      // <--- MODUL --->
       // Kerjakan menggunakan operator logical sesuai petunjuk berikut
       //*. nilai akhir operator and (&&) jika nilai sisi kiri b > a, sisi kanan a == a
 
