--- a/JS_primitif-data/1-string.html
+++ b/JS_primitif-data/1-string.html
@@ -9,6 +9,7 @@
   <body>
     <script>
       // Semua karakter baik huruf atau angka yang dibalut oleh "", '', atau ``
+
       // Contoh String
       var name = "Digidev";
       var city = "Medan";
@@ -16,6 +17,7 @@
       var emptyString = ""; //string kosong
       console.log(name);
 
+      // <--- MODUL --->
       // Buatlah variable baru yg isinya adalah nama kamu,
       // Silahkan tampilkan pada console
 
