--- a/JS_primitif-data/3-boolean.html
+++ b/JS_primitif-data/3-boolean.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <script>
-      // Hanya bernilai dua, true atau false. TIDAK dibalut
+      // Hanya bernilai dua, true atau false. TIDAK dibalut kutip
+
       // Contoh Tipe Data Boolean
       var isOpen = true;
       var isValid = false;
       console.log(isOpen);
 
+      // <--- MODUL --->
       // Buatlah variable baru yg isinya adalah status menikah kamu
       // Silahkan tampilkan pada console
 
