--- a/JS_primitif-data/4-object.html
+++ b/JS_primitif-data/4-object.html
@@ -9,6 +9,7 @@
   <body>
     <script>
       // Object adalah tipe data yg memiliki beberapa property di dalamnya
+
       // Contoh Tipe Data Object
       var student = {
         name: "Faishal",
@@ -17,6 +18,7 @@
       var emptyObject = {};
       console.log(student);
 
+      // <--- MODUL --->
       // Buatlah variable baru yg isinya berupa info tentang smartphone kamu
       // Silahkan tampilkan pada console
 
