--- a/JS_primitif-data/5-array.html
+++ b/JS_primitif-data/5-array.html
@@ -9,10 +9,14 @@
   <body>
     <script>
       // Array adalah tipe data yang berupa kumpulan dari beberapa data yang homogen
-      // array string, array number dan array object
+      // array of string, array of number dan array of object
+
       // Contoh Tipe Data Array
-      var fruits = ["apel", "mangga", "nenas"];
-      var shoesNumbers = [37, 38, 39, 40, 41, 42];
+      var fruits = ["apel", "mangga", "nenas"]; // array string
+
+      var shoesNumbers = [37, 38, 39, 40, 41, 42]; // array number
+
+      // array object
       var students = [
         {
           name: "Faishal",
@@ -25,9 +29,10 @@
       ];
       var emptyArray = [];
       console.log(fruits);
-      console.log(fruits[2]);
-      console.log(students[1]);
+      // console.log(shoesNumbers[2]);
+      // console.log(students[1]);
 
+      // <--- MODUL --->
       // Buatlah variable baru berupa array.
       // Silahkan tampilkan pada console
 
