--- a/JS_primitif-data/6-function.html
+++ b/JS_primitif-data/6-function.html
@@ -9,6 +9,7 @@
   <body>
     <script>
       // Function adalah tipe data yg bisa melakukan sebuah aktifitas/fungsi di dalam browser
+
       // Contoh Tipe Data Function
       var showAlert = function () {
         alert("digidev");
@@ -20,6 +21,7 @@
         alert("GANTIII");
       }
 
+      // <--- MODUL --->
       // Buatlah variable baru berupa function
       // yg menampilkan alert Nama Kamu.
       // Silahkan Jalankan Function tsb
