--- a/JS_Operators/3-comparison.html
+++ b/JS_Operators/3-comparison.html
@@ -10,12 +10,15 @@
     <script>
       // Javascript Comparison Operators
       // hasil dari operator ini bernilai boolean (true atau false)
+
+      // Inisiasi variable awal
       var a = 10;
       var b = 40;
       var c = "10";
 
+      // Notes: Uncoment code console log utk melihat hasil console di browser
       // ==	equal to
-      // console.log(a == b);
+      console.log(a == b);
       // console.log(a == c);
 
       // ===	equal value and equal type
@@ -40,12 +43,12 @@
       // <=	less than or equal to
 
       // ?	ternary operator
-      var newVar =
-        a > b ? "benar! A lebih besar dari B" : "salah, A lebih kecil dari B";
-      console.log(newVar);
+      var newVar = a > b ? "benar! A > B" : "salah, A < B";
+      // console.log(newVar);
 
-      // MODUL
+      // <--- MODUL --->
       // Buatlah perbandingan dengan dengan instruksi sbg berikut
+      // console log hasi perbanidngannya
       // a <= b
 
       // a <= c
