--- a/JS_primitif-data/2-number.html
+++ b/JS_primitif-data/2-number.html
@@ -10,12 +10,14 @@
     <script>
       // Semua data yang berupa nomor/angka,
       // baik bilangan desimal dgn koma (dalam penulisanm koma = titik) atau tidak
+
       // Contoh Tipe Data Number
       var total = 1500;
       var pi = 3.14;
       var emptyNumber = 0;
       console.log(total);
 
+      // <--- MODUL --->
       // Buatlah variable baru yg isinya adalah umur kam
       // Silahkan tampilkan pada console
 
