update some file

--- a/JS_Condition/1-modul.html
+++ b/JS_Condition/1-modul.html
@@ -13,7 +13,7 @@
     <script>
       // <--- MODUL --->
       // Buatlah 3 kondisi menggunakan if, else if dan else
-      // Ubahlah button dibawah sesuai dengan user role nya
+      // Ubahlah button diatas sesuai dengan user role nya
 
       var userRole = "admin"; // => Variable userRole berisi value role user (admin, customer, CEO)
       var domBtn = document.getElementById("newBtn");
