--- a/JS_looping-array/1-for.html
+++ b/JS_looping-array/1-for.html
@@ -16,7 +16,7 @@
 
     <script>
       // Looping bisa diartikan sebagai perulangan
-      // instruksi untuk melakukan pengulangan proses sesuai dengan perintah
+      // instruksi untuk melakukan pengulangan proses sesuai dengan perintah yang diinginkan
 
       var fruits = ["Mangga", "Nenas", "Jeruk", "Apple"];
 
