--- a/JS_function/2-return/2-modul.html
+++ b/JS_function/2-return/2-modul.html
@@ -18,11 +18,7 @@
         var age = 0; // isi umur kamu
         var address = ""; // isi alamat kamu
 
-        return {
-          name: name,
-          age: age,
-          address: address,
-        };
+        return {};
       }
 
       // silahkan console function tsb, dan cek type datanya
