finish js param

--- a/JS_function/3-parameter/3-parameter.html
+++ b/JS_function/3-parameter/3-parameter.html
@@ -5,16 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parameter Function</title>
-    <style>
-      button {
-        border: none;
-        padding: 8px 32px;
-        font-size: 50px;
-        cursor: pointer;
-        color: white;
-        background-color: dodgerblue;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/3-parameter.css" />
   </head>
   <body>
     <button onclick="submitData('Digidev Indonesia', 2, 2020)">
