fix typo wording

--- a/2 HTML_attribute/1-global-attribute.html
+++ b/2 HTML_attribute/1-global-attribute.html
@@ -12,7 +12,7 @@
 
 		<!-- ATRIBUT ID -->
 		<!-- Atribut id berguna untuk memberikan identifikasi pada sebuah elemen -->
-		<!-- Atribut id bersidat unik, artinya di dalam sebuah file HTML tidak boleh ada elemen dengan id yang sama -->
+		<!-- Atribut id bersifat unik, artinya di dalam sebuah file HTML tidak boleh ada elemen dengan id yang sama -->
 		<!-- Atribut ini sering digunakan untuk keperluan javascript -->
 		<h1 id="title">Judul Artikel</h1>
 		<p id="description">Deskripsi artikel</p>
