change manipulation modul

--- a/JS 3 DOM/3-manipulation-element(classList).html
+++ b/JS 3 DOM/3-manipulation-element(classList).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM Class List</title>
+    <title>DOM Manipulation Element (InnerHtml, ClassList)</title>
     <style>
       .urgent {
         color: red;
@@ -17,17 +17,19 @@
     </style>
   </head>
   <body>
-    <h1 id="title" class="heading">DIGIDEV</h1>
-    <h1 class="heading">PT. DIGITAL LENTERA BANGSA</h1>
+    <h1 id="title" class="heading"></h1>
+    <h1 class="heading"></h1>
 
     <script>
       // Class list berguna untuk menambah class name pada element html
       var firstHeader = document.getElementsByClassName("heading");
+      firstHeader[0].innerHTML = "DIGIDEV";
       firstHeader[0].classList += " urgent";
 
       // <---- Modul ----->
       // Instruksi:
-      // Tambahkan class primary pada element heading dengan konten PT. DIGITAL LENTERA BANGSA
+      // Isi content pada element H1 yang kedua berupa PT. DIGITAL LENTERA BANGSA
+      // Tambahkan class primary pada element tsb
 
       //
     </script>
