change manipulation modul

--- a/JS 3 DOM/3-manipulation-element(classList).html
+++ b/JS 3 DOM/3-manipulation-element(classList).html
@@ -21,6 +21,7 @@
     <h1 class="heading"></h1>
 
     <script>
+      // InnerHTML berguna untuk menambah konten pada element html
       // Class list berguna untuk menambah class name pada element html
       var firstHeader = document.getElementsByClassName("heading");
       firstHeader[0].innerHTML = "DIGIDEV";
