--- a/JS 3 DOM/3-manipulation-element(classList).html
+++ b/JS 3 DOM/3-manipulation-element(classList).html
@@ -24,7 +24,7 @@
       // InnerHTML berguna untuk menambah konten pada element html
       // Class list berguna untuk menambah class name pada element html
       var firstHeader = document.getElementsByClassName("heading");
-      firstHeader[0].innerHTML = "DIGIDEV";
+      firstHeader[0].innerHTML = "DIGIDEV INDO";
       firstHeader[0].classList += " urgent";
 
       // <---- Modul ----->
