--- a/CSS/2 Penggunaan & Selector/2-penggunaan-selector-css.html
+++ b/CSS/2 Penggunaan & Selector/2-penggunaan-selector-css.html
@@ -14,10 +14,13 @@
     </h4>
 
     <!-- INTERNAL -->
-    <!-- CSS dapat di kumpulkan ke dalam sebuah tag <style> -->
-    <!-- Tag <style> sebaiknya berada di bagian paling atas dari body, lebih dulu dari kode elemen-elemen html -->
-    <!-- Untuk bisa memilih elemen mana yang ingin di style maka dibutuhkan sebuah selector -->
-    <!-- Ada 3 jenis selector, tag-name, id, dan class -->
+    <!-- 
+      CSS dapat di kumpulkan ke dalam sebuah tag <style> 
+      Tag <style> sebaiknya berada di bagian paling atas dari body, 
+      lebih dulu dari kode elemen-elemen html
+      Untuk bisa memilih elemen mana yang ingin di style maka dibutuhkan sebuah selector 
+      Ada 3 jenis selector, tag-name, id, dan class 
+    -->
     <p id="contoh-id" class="contoh-class">
       Contoh implementasi CSS menggunakan tag style
     </p>
