--- a/CSS/2 Penggunaan & Selector/2-penggunaan-selector-css.html
+++ b/CSS/2 Penggunaan & Selector/2-penggunaan-selector-css.html
@@ -9,7 +9,7 @@
   <body>
     <!-- INLINE -->
     <!-- CSS dapat dilakukan di dalam sebuah elemen html langsung melalui atribut style -->
-    <h4 style="color: blue">
+    <h4 style="color: blue; font-size: 20px">
       Contoh implementasi CSS menggunakan atribut style
     </h4>
 
