--- a/CSS/3 Box Model/3-box-model.html
+++ b/CSS/3 Box Model/3-box-model.html
@@ -6,12 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Box Model</title>
     <style>
+      body {
+        background-color: lightgray;
+      }
       .container {
-        margin: 30px;
+        font-size: 30px;
+        margin: 40px;
+        padding: 25px;
+        background-color: orange;
+        border: 9px solid red;
       }
     </style>
   </head>
   <body>
+    <!-- 
+      Box Model adalah permodelan sebuah element html yang 
+      dimodelkan ke bentuk sebuah kotak/box.
+      Dimana box model ini biasanya tersusun atas 4 komponen.
+      1. Content
+      2. Padding
+      3. Border
+      4. Margin
+     -->
+    <div class="container">DIGIDEV INDONESIA</div>
     <div class="container">DIGIDEV INDONESIA</div>
   </body>
 </html>
