--- a/CSS/2 Penggunaan & Selector/2-penggunaan-selector-css.html
+++ b/CSS/2 Penggunaan & Selector/2-penggunaan-selector-css.html
@@ -17,7 +17,8 @@
     <!-- 
       CSS dapat di kumpulkan ke dalam sebuah tag <style> 
       Tag <style> sebaiknya berada di bagian paling atas dari body, 
-      lebih dulu dari kode elemen-elemen html
+      lebih dulu dari kode elemen-elemen html.
+      ** SELECTOR
       Untuk bisa memilih elemen mana yang ingin di style maka dibutuhkan sebuah selector 
       Ada 3 jenis selector, tag-name, id, dan class 
     -->
