add modules css

--- a/CSS/0-intro.html
+++ b/CSS/0-intro.html
@@ -11,16 +11,16 @@
 		<!-- CSS mendeskripsikan bagaimana elemen-elemen HTML akan ditampilkan di browser -->
 
 		<h3>Basic CSS</h3>
-		<p>format Penulisan</p>
-		<p>font style</p>
-		<p>width, height, min, max</p>
-		<p>box model</p>
-		<p>color, background color</p>
-		<p>display</p>
-		<p>float, inline-block</p>
-		<p>opacity</p>
-		<p>overflow</p>
-		<p>position & z-index</p>
-		<p>!important & priority</p>
+		<ol>
+			<li>Syntax</li>
+			<li>Penggunaan & Selector</li>
+			<li>Box Model</li>
+			<li>Margin dan Padding</li>
+			<li>Background Color</li>
+			<li>Font</li>
+			<li>Border, Width dan Height</li>
+			<li>Display</li>
+			<li>Position dan Z-index</li>
+		</ol>
 	</body>
 </html>
