--- a/CSS/5 Background Color/5-tugas.html
+++ b/CSS/5 Background Color/5-tugas.html
@@ -20,17 +20,16 @@
 		<div class="rgb-color"></div>
 
 		<style>
-			div {
-				/* color: white; */
+			.hex-color {
 				width: 500px;
 				height: 100px;
-			}
-			.hex-color {
 				/* Your code starts here */
 
 				/* Your code ends here */
 			}
 			.rgb-color {
+				width: 500px;
+				height: 100px;
 				/* Your code starts here */
 
 				/* Your code ends here */
