fix typo margin and padding

--- a/CSS/4 Margin dan Padding/4-margin-dan-padding.html
+++ b/CSS/4 Margin dan Padding/4-margin-dan-padding.html
@@ -14,7 +14,7 @@
 
 		<!-- PADDING -->
 		<!-- Properti padding digunakan untuk menciptakan jarak di dalam elemen -->
-		<!-- Kita bisa menentukan lebar margin dari 4 sisi, atas, kanan, bawah, kiri -->
+		<!-- Kita bisa menentukan lebar padding dari 4 sisi, atas, kanan, bawah, kiri -->
 
 		<div class="container">
 			<div class="margin-1">
@@ -100,19 +100,6 @@
 			.margin-kanan {
 				margin-right: 50px;
 			}
-			/* JUST MARGIN */
-			.margin-semua-sisi {
-				margin: 30px;
-			}
-			.margin-sumbu-x-y {
-				margin: 30px 20px;
-			}
-			.margin-tiga-nilai {
-				margin: 30px 20px 10px;
-			}
-			.margin-per-sisi {
-				margin: 30px 20px 10px 5px;
-			}
 
 			/* PADDING-SIDE */
 			.padding-atas {
@@ -133,6 +120,21 @@
 				padding-bottom: 30px;
 				padding-left: 30px;
 			}
+
+			/* JUST MARGIN */
+			.margin-semua-sisi {
+				margin: 30px;
+			}
+			.margin-sumbu-x-y {
+				margin: 30px 20px;
+			}
+			.margin-tiga-nilai {
+				margin: 30px 20px 10px;
+			}
+			.margin-per-sisi {
+				margin: 30px 20px 10px 5px;
+			}
+
 			/* JUST PADDING */
 			.padding-semua-sisi {
 				padding: 20px;
