add wording position

--- a/CSS/9 Position dan Z-Index/9-position-dan-z-index.html
+++ b/CSS/9 Position dan Z-Index/9-position-dan-z-index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<!-- POSITION -->
+		<!-- Properti position secara spesifik mengatur posisi sebuah elemen -->
 
 		<!-- Static -->
 		<!-- Secara default semua elemen html memiliki position static -->
