--- a/CSS/2 Penggunaan dan Selector/2-tugas.html
+++ b/CSS/2 Penggunaan dan Selector/2-tugas.html
@@ -13,8 +13,8 @@
       * Gunakan metode external file yang file cssnya diletakkan di dalam folder assets.
       * Gunakan CSS untuk menstyling 3 element html di bawah dengan ketentuan sbg berikut. 
         1. Pada element No. 1 Gunakan selector tag untuk merubah font color menjadi merah => color: red;
-        2. Pada element No. 2 Gunakan selector class untuk merubah font color menajdi biru => color: blue;
-        3. Pada element No. 3 Gunakan selector h1 untuk merubah font color menjadi hijau => color: green;
+        2. Pada element No. 2 Gunakan selector class untuk merubah font color menajdi biru => color: green;
+        3. Pada element No. 3 Gunakan selector id untuk merubah font color menjadi hijau => color: blue;
       * Lihat contoh UI nya pada gambar 2-tugas.png
       * Kumpulkan tugas ke digidev.id@gmail.com . 
       * Dalam bentuk rar, terdapat 1 file 2-tugas.html dan 1 folder assets berisi 1 file css yang dipanggil di dalam file 2-tugas.html
