--- a/Javascript/JS 5 function/1-invocation/1-modul.html
+++ b/Javascript/JS 5 function/1-invocation/1-modul.html
@@ -22,7 +22,7 @@
     <script>
       // Instruksi:
       // Buatlah sebuah button yang isi textnya berupa nama lengkap kamu
-      // Tambahkan kelas button tsb
+      // Tambahkan kelas button tsb => .btn
       // Lakukan proses invocation
 
       // 1. Inisiasi function
