--- a/CSS/10 Flexbox/10-flexbox.html
+++ b/CSS/10 Flexbox/10-flexbox.html
@@ -110,26 +110,6 @@
 			<div>39</div>
 		</div>
 
-		<!-- Gap -->
-		<!-- Properti ini mengatur jarak antara elemen child -->
-		<h3>Gap</h3>
-		<div class="flex gap">
-			<div>1</div>
-			<div>2</div>
-			<div>3</div>
-			<div>4</div>
-			<div>5</div>
-			<div>6</div>
-			<div>7</div>
-			<div>8</div>
-			<div>9</div>
-			<div>10</div>
-			<div>11</div>
-			<div>12</div>
-			<div>13</div>
-			<div>14</div>
-		</div>
-
 		<!-- Order -->
 		<!-- Properti ini digunakan pada elemen child untuk mengatur urutan flex -->
 		<h3>Order</h3>
@@ -179,18 +159,12 @@
 			.align-content {
 				height: 300px;
 				flex-wrap: wrap;
-				align-content: center;
+				align-content: flex-start;
+				/* align-content: center; */
 				/* align-content: flex-end; */
-				/* align-content: flex-start; */
 				/* align-content: space-around; */
 				/* align-content: space-between; */
 				/* align-content: stretch; */
-			}
-			.gap {
-				flex-wrap: wrap;
-				gap: 10px 20px;
-				/* row-gap: 10px; */
-				/* column-gap: 20px; */
 			}
 			.satu {
 				order: 0;
