--- a/CSS/11 Grid/11-grid.html
+++ b/CSS/11 Grid/11-grid.html
@@ -100,7 +100,9 @@
 			}
 			.gap {
 				grid-template-columns: auto auto auto;
-				gap: 10px;
+				gap: 30px 20px;
+				/* row-gap: 20px; */
+				/* column-gap: 20px; */
 			}
 			.justify-content {
 				grid-template-columns: auto auto auto;
