fix typo in responsive web design

--- a/CSS/12 Responsive Web Design/12-tugas.html
+++ b/CSS/12 Responsive Web Design/12-tugas.html
@@ -9,8 +9,8 @@
 	<body>
 		<!-- Terdapat sebuah elemen div berbentuk bola -->
 		<!-- Ubah lah style dari bola (class: box) sesuai dengan ketentuan berikut -->
-		<!-- Pada min-width: 500px, ubah lebar box menjadi 100% dan warna latar belakang menjadi merah, lalu ubah border-radius menjadi 0 -->
-		<!-- Pada max-width: 800px, ubah warna latar belakang menjadi biru dan border-radius menjadi 0 -->
+		<!-- Pada max-width: 500px, ubah lebar box menjadi 100% dan warna latar belakang menjadi merah, lalu ubah border-radius menjadi 0 -->
+		<!-- Pada min-width: 800px, ubah warna latar belakang menjadi biru dan border-radius menjadi 0 -->
 		<div class="box"></div>
 
 		<style>
