update flexbox module

--- a/CSS/10 Flexbox/10-flexbox.html
+++ b/CSS/10 Flexbox/10-flexbox.html
@@ -67,8 +67,8 @@
 		<h3>Align Items</h3>
 		<div class="flex align-items">
 			<div>1</div>
-			<div>2</div>
-			<div>3</div>
+			<div style="height: 80px">2</div>
+			<div style="height: 100px">3</div>
 		</div>
 
 		<!-- Align Content -->
