--- a/CSS/10 Flexbox/10-flexbox.html
+++ b/CSS/10 Flexbox/10-flexbox.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<!-- FLEXBOX -->
-		<!-- Flexbox adalah sebutan untuk sebuah layout yang memiliki parent (container) display flex dan tersusun atas elemen-elemen child (item) -->
+		<!-- Flexbox adalah sebutan untuk sebuah layout yang memiliki parent (container) dengan properti display: flex dan tersusun atas elemen-elemen child (item) -->
 		<!-- Flexbox memiliki properti-properti khusus miliknya -->
 		<!-- Flexbox berfokus kepada elemen parent (container) dari elemen-elemen yang ingin kita susun secara inline -->
 		<h3>Display Flex</h3>
