--- a/CSS/10 Flexbox/10-flexbox.html
+++ b/CSS/10 Flexbox/10-flexbox.html
@@ -10,7 +10,7 @@
 		<!-- FLEXBOX -->
 		<!-- Flexbox adalah sebutan untuk sebuah layout yang memiliki parent (container) dengan properti display: flex dan tersusun atas elemen-elemen child (item) -->
 		<!-- Flexbox memiliki properti-properti khusus miliknya -->
-		<!-- Flexbox berfokus kepada elemen parent (container) dari elemen-elemen yang ingin kita susun secara inline -->
+		<!-- Flexbox berfokus kepada elemen parent (container) dari elemen-elemen yang ingin kita susun -->
 		<h3>Display Flex</h3>
 		<div class="flex">
 			<div>1</div>
@@ -63,7 +63,7 @@
 		</div>
 
 		<!-- Align Items -->
-		<!-- Properti ini mengatur letak elemen child terhadap masing-masing child -->
+		<!-- Properti ini mengatur letak elemen antar item child -->
 		<h3>Align Items</h3>
 		<div class="flex align-items">
 			<div>1</div>
@@ -72,7 +72,7 @@
 		</div>
 
 		<!-- Align Content -->
-		<!-- Properti ini mengatur letak elemen child secara vertikal -->
+		<!-- Properti ini mengatur letak keseluruhan elemen child secara vertikal terhadap ruang container -->
 		<h3>Align Content</h3>
 		<div class="flex align-content">
 			<div>1</div>
