--- a/CSS/10 Flexbox/10-tugas.html
+++ b/CSS/10 Flexbox/10-tugas.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<!-- Perhatikan gambar 10-tugas.png -->
-		<!-- Susun lah ke ekmpat paragraf di bawah agar sama seperti pada gambar -->
+		<!-- Susun lah ke empat paragraf di bawah agar sama seperti pada gambar -->
 		<div class="navbar">
 			<p>Home</p>
 			<p>About Us</p>
@@ -26,6 +26,11 @@
 				background-color: blue;
 				color: white;
 				padding: 0 50px;
+				/* your code starts here */
+
+				/* your code ends here */
+			}
+			p {
 				/* your code starts here */
 
 				/* your code ends here */
