--- a/Javascript/JS 1 tipe-data/3-tugas.html
+++ b/Javascript/JS 1 tipe-data/3-tugas.html
@@ -8,15 +8,11 @@
   </head>
   <body>
     <script>
-      // Object adalah tipe data yg memiliki beberapa property di dalamnya
+      // <--- MODUL --->
+      // Buatlah variable baru yg isinya adalah status menikah kamu
+      // Silahkan tampilkan pada console
 
-      // Contoh Tipe Data Object
-      var student = {
-        name: "Faishal",
-        age: 26,
-      };
-      var emptyObject = {};
-      console.log(student);
+      //
     </script>
   </body>
 </html>
