--- a/Javascript/JS 1 tipe-data/6-tugas.html
+++ b/Javascript/JS 1 tipe-data/6-tugas.html
@@ -8,15 +8,12 @@
   </head>
   <body>
     <script>
-      // Object adalah tipe data yg memiliki beberapa property di dalamnya
+      // <--- MODUL --->
+      // Buatlah variable baru berupa function
+      // yg menampilkan alert Nama Kamu.
+      // Silahkan Jalankan Function tsb
 
-      // Contoh Tipe Data Object
-      var student = {
-        name: "Faishal",
-        age: 26,
-      };
-      var emptyObject = {};
-      console.log(student);
+      //
     </script>
   </body>
 </html>
