separate modul task with code modul

--- a/Javascript/JS 3 DOM/1-tugas.html
+++ b/Javascript/JS 3 DOM/1-tugas.html
@@ -11,11 +11,12 @@
     <h1 class="heading">PT. DIGITAL LENTERA BANGSA</h1>
 
     <script>
-      // DOM Get element adalah instruksi dalam dom untuk mengambil value dari sebuah element sesuai dengan selector yg digunakan
-      // ada bbrp selector yg digunakan ketika proses get element yaitu id, class, tag, name
+      // <----- Modul ----->
+      // Buatlah sebuah variable dgn nama newHeading.
+      // Isi variable newHeading dengan getElementsByClassName dengan class = heading
+      // console content text yang ada di dalam element tersebut
 
-      var theTitle = document.getElementById("title");
-      console.log(theTitle.innerHTML);
+      //
     </script>
   </body>
 </html>
