--- a/Javascript/JS 3 DOM/3-tugas.html
+++ b/Javascript/JS 3 DOM/3-tugas.html
@@ -21,11 +21,12 @@
     <h1 class="heading"></h1>
 
     <script>
-      // InnerHTML berguna untuk menambah konten pada element html
-      // Class list berguna untuk menambah class name pada element html
-      var firstHeader = document.getElementsByClassName("heading");
-      firstHeader[0].innerHTML = "DIGIDEV INDO";
-      firstHeader[0].classList += " urgent";
+      // <---- Modul ----->
+      // Instruksi:
+      // Isi content pada element H1 kedua dengan konten PT. DIGITAL LENTERA BANGSA
+      // Tambahkan class primary pada element tsb
+
+      //
     </script>
   </body>
 </html>
