add inisiatsi var

--- a/Javascript/JS 1 tipe-data/2-number.html
+++ b/Javascript/JS 1 tipe-data/2-number.html
@@ -15,7 +15,7 @@
       var total = 1500;
       var pi = 3.14;
       var emptyNumber = 0;
-      console.log(total);
+      console.log(typeof total);
     </script>
   </body>
 </html>
