--- a/Javascript/JS 2 operators/3-tugas.html
+++ b/Javascript/JS 2 operators/3-tugas.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <script>
+      // Inisiasi variable awal
+      var a = 10;
+      var b = 40;
+      var c = "10";
       // <--- MODUL --->
       // Buatlah perbandingan dengan dengan instruksi sbg berikut
       // console log hasi perbanidngannya
