add inisiatsi var

--- a/Javascript/JS 2 operators/4-tugas.html
+++ b/Javascript/JS 2 operators/4-tugas.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <script>
+      var a = 10;
+      var b = 40;
+      var c = "10";
       // <--- MODUL --->
       // Kerjakan menggunakan operator logical sesuai petunjuk berikut
       //*. nilai akhir operator and (&&) jika nilai sisi kiri b > a, sisi kanan a == a
