update tugas 4 css

--- a/Daily Task/CSS/4-grocery-list.html
+++ b/Daily Task/CSS/4-grocery-list.html
@@ -7,8 +7,7 @@
 		<title>Tugas CSS 4</title>
 	</head>
 	<body>
-		<!-- Perhatikan gambar 4-to-do-card.png -->
-		<!-- Buat lah tampilan card seperti gambar dengan menggunakan html dan css -->
-		<!-- Ubah nama 'Ibnu Hazar' menjadi nama kalian -->
+		<!-- Perhatikan gambar 4-grocery-list.png -->
+		<!-- Buat lah tampilan halaman seperti gambar dengan menggunakan html dan css -->
 	</body>
 </html>
