add daily task JS 3 and 4

--- a/Daily Task/Javascript/3-dom-preview-card.html
+++ b/Daily Task/Javascript/3-dom-preview-card.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Tugas JS 2</title>
+		<title>JS Tugas 3</title>
 	</head>
 	<body>
-		<!-- Perhatikan gambar 2-grocery-card.png -->
-		<!-- Buat lah card seperti pada gambar menggunakan DOM -->
-		<!-- Style tidak perlu menggunakan DOM, kamu bisa gunakan CSS -->
+		<!-- Perhatikan gambar 3-dom-preview-card.jpg -->
+		<!-- Buatlah tampilan halaman seperti pada gambar dengan menggunakan JS DOM -->
+		<!-- Beri event listener pada setiap tombol pada card, jika tombol di klik maka akan menampilkan alert nama kalian -->
 		<!-- Gunakan elemen container sebagai patokan awal -->
 
 		<div id="container"></div>
